...
        android:layout_alignParentBottom="true"
        android:background="@drawable/messages_layout">

        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_message"
            android:hint="Type message..."
            android:padding="17dp">
        </EditText>

        <ImageButton
            android:id="@+id/send_group_message_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/send_message"
            android:layout_marginLeft="20dp">
        </ImageButton>

...
