<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberLoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/inputs"
        android:padding="8dp"
        android:hint="Enter your phone number..."
        android:textSize="15sp"
        android:drawableStart="@drawable/phone"
        android:textAlignment="center"
        android:textStyle="bold">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_code"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_number"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/inputs"
        android:padding="8dp"
        android:hint="Enter your received verification code..."
        android:textSize="15sp"
        android:drawableStart="@drawable/password"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_button"
        android:background="@drawable/buttons"
        android:layout_below="@id/verification_code"
        android:text="Send Verification Code"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@android:color/background_light"
        android:textSize="19sp">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verifiy_number_button"
        android:background="@drawable/buttons"
        android:layout_below="@id/verification_button"
        android:text="Verify Code"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:visibility="invisible">
    </Button>

</RelativeLayout>