<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/signup_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter">
    </ImageView>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_image"
        android:hint="Email..."
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">
    </EditText>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_email"
        android:hint="Password..."
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:drawableStart="@drawable/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">
    </EditText>


    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:padding="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:text="Create Account"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons">
    </Button>

    <TextView
        android:id="@+id/existing_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_button"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:text="Already have an Account ?"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark">
    </TextView>

</RelativeLayout>